Stop showing scrollbars around those silly disc icons.

--- a/base/assets/sass/application.scss
+++ b/base/assets/sass/application.scss
@@ -152,7 +152,7 @@
   .ss-icon {
     display: block;
     margin: auto;
-    overflow: auto;
+    overflow: hidden;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     width: 42px; height: 42px;
